Chat: break words in messages to prevent overflow

--- a/src/Chat/Chat.css
+++ b/src/Chat/Chat.css
@@ -17,6 +17,7 @@
 
 #chat .message {
   font-size: 1rem;
+  word-break: break-word;
 }
 
 #chat .ava {
